fix img location

--- a/index.html
+++ b/index.html
@@ -167,43 +167,43 @@
               <li class="title">Subscriptions</li>
               <li>
                 <a href="#">
-                  <img src="/img/profile-pic.jpg" alt="">
+                  <img src="img/profile-pic.jpg" alt="">
                   <span>channel</span>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <img src="/img/profile-pic.jpg" alt="">
+                  <img src="img/profile-pic.jpg" alt="">
                   <span>channel</span>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <img src="/img/profile-pic.jpg" alt="">
+                  <img src="img/profile-pic.jpg" alt="">
                   <span>channel</span>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <img src="/img/profile-pic.jpg" alt="">
+                  <img src="img/profile-pic.jpg" alt="">
                   <span>channel</span>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <img src="/img/profile-pic.jpg" alt="">
+                  <img src="img/profile-pic.jpg" alt="">
                   <span>channel</span>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <img src="/img/profile-pic.jpg" alt="">
+                  <img src="img/profile-pic.jpg" alt="">
                   <span>channel</span>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <img src="/img/profile-pic.jpg" alt="">
+                  <img src="img/profile-pic.jpg" alt="">
                   <span>channel</span>
                 </a>
               </li>
@@ -251,25 +251,25 @@
               <li class="title">Subscriptions</li>
               <li>
                 <a href="#">
-                  <img src="/img/mineYouTubLogo.png" alt="">
+                  <img src="img/mineYouTubLogo.png" alt="">
                   <span>Youtube Premium</span>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <img src="/img/youTubeStodoLogo.png" alt="">
+                  <img src="img/youTubeStodoLogo.png" alt="">
                   <span>YouTube Studio</span>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <img src="/img/youTubeMusicLogo.png" alt="">
+                  <img src="img/youTubeMusicLogo.png" alt="">
                   <span>YouTube Music</span>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <img src="/img/youtubeKidLogo.png" alt="">
+                  <img src="img/youtubeKidLogo.png" alt="">
                   <span>YouTube Kids</span>
                 </a>
               </li>
