add JavaScript Fetchers

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="page-contant">
       <div class="left-side">
         <!-- Start Slidebar -->
-        <div class="sidebar">
+        <div class="sidebar active">
           <ul>
             <li>
               <a href="#">
@@ -326,37 +326,34 @@
         <div class="top-menu">
           <ul>
             <li>
-              <a class="active" href="">All</a>
+              <a href="#" class="active">All</a>
             </li>
             <li>
-              <a href="">Gaming</a>
+              <a href="#">Gaming</a>
             </li>
             <li>
-              <a href="">Mixes</a>
+              <a href="#">Mixes</a>
             </li>
             <li>
-              <a href="">Computer Programming</a>
+              <a href="#">Computer Programming</a>
             </li>
             <li>
-              <a href="">Podcasts</a>
+              <a href="#">Podcasts</a>
             </li>
             <li>
-              <a href="">Sheikh</a>
+              <a href="#">Valorant</a>
             </li>
             <li>
-              <a href="">Valorant</a>
+              <a href="#">Action-adventure games</a>
             </li>
             <li>
-              <a href="">Action-adventure games</a>
+              <a href="#">Recently uploaded</a>
             </li>
             <li>
-              <a href="">Recently uploaded</a>
+              <a href="#">Watched</a>
             </li>
             <li>
-              <a href="">Watched</a>
-            </li>
-            <li>
-              <a href="">New to you</a>
+              <a href="#">New to you</a>
             </li>
           </ul>
         </div>
@@ -364,317 +361,13 @@
         <!-- Start Thumbnail -->
         <div class="thumbnail">
           <div class="videos-container">
-            <div class="thumbnail-item">
-              <a href="#">
-                <div class="thumbnail-image">
-                  <img src="img/thumbnail.jpg" alt="">
-                  <span class="video-length">26:31</span>
-                </div>
-                <div class="thumbnail-description">
-                  <img src="img/profile-pic2.png" alt="">
-                  <div class="text">
-                    <p>Lorem ipsum dolor sit amet, consecte adipiscing elit.</p>
-                    <span class="channel-name">James Gouse</span>
-                    <span class="views">15K Viwes .</span>
-                    <span class="time"> 1 week ago</span>
-                  </div>
-                </div>                
-              </a>
-            </div>
-            <div class="thumbnail-item">
-              <a href="#">
-                <div class="thumbnail-image">
-                  <img src="img/thumbnail.jpg" alt="">
-                  <span class="video-length">26:31</span>
-                </div>
-                <div class="thumbnail-description">
-                  <img src="img/profile-pic2.png" alt="">
-                  <div class="text">
-                    <p>Lorem ipsum dolor sit amet, consecte adipiscing elit.</p>
-                    <span class="channel-name">James Gouse</span>
-                    <span class="views">15K Viwes .</span>
-                    <span class="time"> 1 week ago</span>
-                  </div>
-                </div>                
-              </a>
-            </div>
-            <div class="thumbnail-item">
-              <a href="#">
-                <div class="thumbnail-image">
-                  <img src="img/thumbnail.jpg" alt="">
-                  <span class="video-length">26:31</span>
-                </div>
-                <div class="thumbnail-description">
-                  <img src="img/profile-pic2.png" alt="">
-                  <div class="text">
-                    <p>Lorem ipsum dolor sit amet, consecte adipiscing elit.</p>
-                    <span class="channel-name">James Gouse</span>
-                    <span class="views">15K Viwes .</span>
-                    <span class="time"> 1 week ago</span>
-                  </div>
-                </div>                
-              </a>
-            </div>
-            <div class="thumbnail-item">
-              <a href="#">
-                <div class="thumbnail-image">
-                  <img src="img/thumbnail.jpg" alt="">
-                  <span class="video-length">26:31</span>
-                </div>
-                <div class="thumbnail-description">
-                  <img src="img/profile-pic2.png" alt="">
-                  <div class="text">
-                    <p>Lorem ipsum dolor sit amet, consecte adipiscing elit.</p>
-                    <span class="channel-name">James Gouse</span>
-                    <span class="views">15K Viwes .</span>
-                    <span class="time"> 1 week ago</span>
-                  </div>
-                </div>                
-              </a>
-            </div>
-            <div class="thumbnail-item">
-              <a href="#">
-                <div class="thumbnail-image">
-                  <img src="img/thumbnail.jpg" alt="">
-                  <span class="video-length">26:31</span>
-                </div>
-                <div class="thumbnail-description">
-                  <img src="img/profile-pic2.png" alt="">
-                  <div class="text">
-                    <p>Lorem ipsum dolor sit amet, consecte adipiscing elit.</p>
-                    <span class="channel-name">James Gouse</span>
-                    <span class="views">15K Viwes .</span>
-                    <span class="time"> 1 week ago</span>
-                  </div>
-                </div>                
-              </a>
-            </div>
-            <div class="thumbnail-item">
-              <a href="#">
-                <div class="thumbnail-image">
-                  <img src="img/thumbnail.jpg" alt="">
-                  <span class="video-length">26:31</span>
-                </div>
-                <div class="thumbnail-description">
-                  <img src="img/profile-pic2.png" alt="">
-                  <div class="text">
-                    <p>Lorem ipsum dolor sit amet, consecte adipiscing elit.</p>
-                    <span class="channel-name">James Gouse</span>
-                    <span class="views">15K Viwes .</span>
-                    <span class="time"> 1 week ago</span>
-                  </div>
-                </div>                
-              </a>
-            </div>
-            <div class="thumbnail-item">
-              <a href="#">
-                <div class="thumbnail-image">
-                  <img src="img/thumbnail.jpg" alt="">
-                  <span class="video-length">26:31</span>
-                </div>
-                <div class="thumbnail-description">
-                  <img src="img/profile-pic2.png" alt="">
-                  <div class="text">
-                    <p>Lorem ipsum dolor sit amet, consecte adipiscing elit.</p>
-                    <span class="channel-name">James Gouse</span>
-                    <span class="views">15K Viwes .</span>
-                    <span class="time"> 1 week ago</span>
-                  </div>
-                </div>                
-              </a>
-            </div>
-            <div class="thumbnail-item">
-              <a href="#">
-                <div class="thumbnail-image">
-                  <img src="img/thumbnail.jpg" alt="">
-                  <span class="video-length">26:31</span>
-                </div>
-                <div class="thumbnail-description">
-                  <img src="img/profile-pic2.png" alt="">
-                  <div class="text">
-                    <p>Lorem ipsum dolor sit amet, consecte adipiscing elit.</p>
-                    <span class="channel-name">James Gouse</span>
-                    <span class="views">15K Viwes .</span>
-                    <span class="time"> 1 week ago</span>
-                  </div>
-                </div>                
-              </a>
-            </div>
-            <div class="thumbnail-item">
-              <a href="#">
-                <div class="thumbnail-image">
-                  <img src="img/thumbnail.jpg" alt="">
-                  <span class="video-length">26:31</span>
-                </div>
-                <div class="thumbnail-description">
-                  <img src="img/profile-pic2.png" alt="">
-                  <div class="text">
-                    <p>Lorem ipsum dolor sit amet, consecte adipiscing elit.</p>
-                    <span class="channel-name">James Gouse</span>
-                    <span class="views">15K Viwes .</span>
-                    <span class="time"> 1 week ago</span>
-                  </div>
-                </div>                
-              </a>
-            </div>
-            <div class="thumbnail-item">
-              <a href="#">
-                <div class="thumbnail-image">
-                  <img src="img/thumbnail.jpg" alt="">
-                  <span class="video-length">26:31</span>
-                </div>
-                <div class="thumbnail-description">
-                  <img src="img/profile-pic2.png" alt="">
-                  <div class="text">
-                    <p>Lorem ipsum dolor sit amet, consecte adipiscing elit.</p>
-                    <span class="channel-name">James Gouse</span>
-                    <span class="views">15K Viwes .</span>
-                    <span class="time"> 1 week ago</span>
-                  </div>
-                </div>                
-              </a>
-            </div>
-            <div class="thumbnail-item">
-              <a href="#">
-                <div class="thumbnail-image">
-                  <img src="img/thumbnail.jpg" alt="">
-                  <span class="video-length">26:31</span>
-                </div>
-                <div class="thumbnail-description">
-                  <img src="img/profile-pic2.png" alt="">
-                  <div class="text">
-                    <p>Lorem ipsum dolor sit amet, consecte adipiscing elit.</p>
-                    <span class="channel-name">James Gouse</span>
-                    <span class="views">15K Viwes .</span>
-                    <span class="time"> 1 week ago</span>
-                  </div>
-                </div>                
-              </a>
-            </div>
-            <div class="thumbnail-item">
-              <a href="#">
-                <div class="thumbnail-image">
-                  <img src="img/thumbnail.jpg" alt="">
-                  <span class="video-length">26:31</span>
-                </div>
-                <div class="thumbnail-description">
-                  <img src="img/profile-pic2.png" alt="">
-                  <div class="text">
-                    <p>Lorem ipsum dolor sit amet, consecte adipiscing elit.</p>
-                    <span class="channel-name">James Gouse</span>
-                    <span class="views">15K Viwes .</span>
-                    <span class="time"> 1 week ago</span>
-                  </div>
-                </div>                
-              </a>
-            </div>
-            <div class="thumbnail-item">
-              <a href="#">
-                <div class="thumbnail-image">
-                  <img src="img/thumbnail.jpg" alt="">
-                  <span class="video-length">26:31</span>
-                </div>
-                <div class="thumbnail-description">
-                  <img src="img/profile-pic2.png" alt="">
-                  <div class="text">
-                    <p>Lorem ipsum dolor sit amet, consecte adipiscing elit.</p>
-                    <span class="channel-name">James Gouse</span>
-                    <span class="views">15K Viwes .</span>
-                    <span class="time"> 1 week ago</span>
-                  </div>
-                </div>                
-              </a>
-            </div>
-            <div class="thumbnail-item">
-              <a href="#">
-                <div class="thumbnail-image">
-                  <img src="img/thumbnail.jpg" alt="">
-                  <span class="video-length">26:31</span>
-                </div>
-                <div class="thumbnail-description">
-                  <img src="img/profile-pic2.png" alt="">
-                  <div class="text">
-                    <p>Lorem ipsum dolor sit amet, consecte adipiscing elit.</p>
-                    <span class="channel-name">James Gouse</span>
-                    <span class="views">15K Viwes .</span>
-                    <span class="time"> 1 week ago</span>
-                  </div>
-                </div>                
-              </a>
-            </div>
-            <div class="thumbnail-item">
-              <a href="#">
-                <div class="thumbnail-image">
-                  <img src="img/thumbnail.jpg" alt="">
-                  <span class="video-length">26:31</span>
-                </div>
-                <div class="thumbnail-description">
-                  <img src="img/profile-pic2.png" alt="">
-                  <div class="text">
-                    <p>Lorem ipsum dolor sit amet, consecte adipiscing elit.</p>
-                    <span class="channel-name">James Gouse</span>
-                    <span class="views">15K Viwes .</span>
-                    <span class="time"> 1 week ago</span>
-                  </div>
-                </div>                
-              </a>
-            </div>
-            <div class="thumbnail-item">
-              <a href="#">
-                <div class="thumbnail-image">
-                  <img src="img/thumbnail.jpg" alt="">
-                  <span class="video-length">26:31</span>
-                </div>
-                <div class="thumbnail-description">
-                  <img src="img/profile-pic2.png" alt="">
-                  <div class="text">
-                    <p>Lorem ipsum dolor sit amet, consecte adipiscing elit.</p>
-                    <span class="channel-name">James Gouse</span>
-                    <span class="views">15K Viwes .</span>
-                    <span class="time"> 1 week ago</span>
-                  </div>
-                </div>                
-              </a>
-            </div>
-            <div class="thumbnail-item">
-              <a href="#">
-                <div class="thumbnail-image">
-                  <img src="img/thumbnail.jpg" alt="">
-                  <span class="video-length">26:31</span>
-                </div>
-                <div class="thumbnail-description">
-                  <img src="img/profile-pic2.png" alt="">
-                  <div class="text">
-                    <p>Lorem ipsum dolor sit amet, consecte adipiscing elit.</p>
-                    <span class="channel-name">James Gouse</span>
-                    <span class="views">15K Viwes .</span>
-                    <span class="time"> 1 week ago</span>
-                  </div>
-                </div>                
-              </a>
-            </div>
-            <div class="thumbnail-item">
-              <a href="#">
-                <div class="thumbnail-image">
-                  <img src="img/thumbnail.jpg" alt="">
-                  <span class="video-length">26:31</span>
-                </div>
-                <div class="thumbnail-description">
-                  <img src="img/profile-pic2.png" alt="">
-                  <div class="text">
-                    <p>Lorem ipsum dolor sit amet, consecte adipiscing elit.</p>
-                    <span class="channel-name">James Gouse</span>
-                    <span class="views">15K Viwes .</span>
-                    <span class="time"> 1 week ago</span>
-                  </div>
-                </div>                
-              </a>
-            </div>
           </div>
         </div>
         <!-- End Thumbnail -->        
       </div>
     </div>
   </div>
+  <!-- Mine Js File -->
+  <script src="js/mine.js"></script>
 </body>
 </html>
